# flask-github-oauth-mongodb-demo

./: .gitignore  main.py  pyproject.toml
templates/: interests.html
